--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>RSSchool CV</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>RSScchool CV Heading</h1>
