refactor: rename folder images to assets

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>RSSchool CV</title>
-        <link rel="stylesheet" href="style.css">
+         <meta charset="UTF-8">
+         <title>RS School CV</title>
+         <link rel="stylesheet" href="style.css">     
     </head>
     <body>
-        <h1>RSScchool CV Heading</h1>
-        <p>RSSchool CV paragraph</p>
+         <h1>RSScchool CV Heading</h1>
+         <p>RSSchool CV paragraph</p>
     </body>
 </html>
