--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
          <meta charset="UTF-8">
          <title>RS School CV</title>
-         <link rel="stylesheet" href="style.css">     
+         <link rel="stylesheet" href="./css/style.css">     
     </head>
     <body>
          <h1>RSScchool CV Heading</h1>
