--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-         <meta charset="UTF-8">
-         <title>RS School CV</title>
-         <link rel="stylesheet" href="./css/style.css">     
-    </head>
-    <body>
-         <h1>RSScchool CV Heading</h1>
-         <p>RSSchool CV paragraph</p>
-    </body>
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>RS School CV</title>
+     <link rel="stylesheet" href="./css/style.css">
+     <link rel="icon" href="./assets/icons/mastak_a-logo_favicon_32x32px.ico" type="image/x-icon">   
+</head>
+<body>
+     
+</body>
 </html>
