feat: add technical code that will help to visualize the development process while learning to layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>RS School CV</title>
      <link rel="stylesheet" href="./css/style.css">
-     <link rel="icon" href="./assets/icons/mastak_a-logo_favicon_32x32px.ico" type="image/x-icon">   
+     <link rel="icon" href="./assets/icons/mastak_a-logo_favicon_32x32px.ico" type="image/x-icon">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">  
 </head>
 <body>
-     
+     <header>header</header>
+     <main>main</main>
+     <footer>footer</footer>
 </body>
 </html>
