feat: add navigation list

--- a/index.html
+++ b/index.html
@@ -11,8 +11,32 @@
      <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">  
 </head>
 <body>
-     <header>header</header>
-     <main>main</main>
-     <footer>footer</footer>
+     <header>
+          <div class="container">
+          <h1>h1</h1>
+          </div>
+          <!--sorry for the stupid full class names. 
+          it was important for me in the learning phase to know exactly 
+          what I was doing and where I was referring to. -->
+          <nav class="navigation">
+               <ul class="navigation_list">
+                    <li class="navigation_item"><a href="#contacts" class="navigation_link">Contacts</a></li>
+                    <li class="navigation_item"><a href="#summary" class="navigation_link">Summary</a></li>
+                    <li class="navigation_item"><a href="#experience" class="navigation_link">Professional Experience</a></li>
+                    <li class="navigation_item"><a href="#skills" class="navigation_link">Skills</a></li>
+                    <li class="navigation_item"><a href="#education" class="navigation_link">Education</a></li>
+                    <li class="navigation_item"><a href="#languages" class="navigation_link">Languages</a></li>
+                    <li class="navigation_item"><a href="#code" class="navigation_link">Code</a></li>
+                    <li class="navigation_item"><a href="#interests" class="navigation_link">Interests</a></li>
+               </ul>
+     </header>
+     <main>
+          <div class="container">
+          <p>main</p>
+          </div></main>
+     <footer>
+          <div class="container">
+          <p>footer</p>
+          </div></footer>
 </body>
 </html>
