--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div></main>
      <footer>
           <div class="container">
-          <p>footer</p>
+          <p>All rights reserved by Alex Serada 2024</p>
           </div></footer>
 </body>
 </html>
