--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
      <header>
           <div class="container">
-          <h1>h1</h1>
+          <h1>
+               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />
+          </h1>
           </div>
           <!--sorry for the stupid full class names. 
           it was important for me in the learning phase to know exactly 
@@ -22,7 +24,7 @@
                <ul class="navigation_list">
                     <li class="navigation_item"><a href="#contacts" class="navigation_link">Contacts</a></li>
                     <li class="navigation_item"><a href="#summary" class="navigation_link">Summary</a></li>
-                    <li class="navigation_item"><a href="#experience" class="navigation_link">Professional Experience</a></li>
+                    <li class="navigation_item"><a href="#experience" class="navigation_link">Experience</a></li>
                     <li class="navigation_item"><a href="#skills" class="navigation_link">Skills</a></li>
                     <li class="navigation_item"><a href="#education" class="navigation_link">Education</a></li>
                     <li class="navigation_item"><a href="#languages" class="navigation_link">Languages</a></li>
@@ -36,7 +38,16 @@
           </div></main>
      <footer>
           <div class="container">
-          <p>All rights reserved by Alex Serada 2024</p>
-          </div></footer>
+          <p>
+               All rights reserved by 
+               <a href="https://github.com/mastaka" target="_blank">Alex Serada</a>
+               | 2024 |
+          </p>
+          <a href="https://rs.school/courses/javascript-ru" target="_blank">
+               <img src="./assets/icons/rs-school-logo.svg" alt="RS School Logo" class="rs-logo">
+          </a>
+
+          </div>
+     </footer>
 </body>
 </html>
