fix: fix footer and colors

--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
           <div class="container">
           <p>main</p>
           </div></main>
-     <footer>
-          <div class="container">
-          <p>
-               All rights reserved by 
-               <a href="https://github.com/mastaka" target="_blank">Alex Serada</a>
-               | 2024 |
-          </p>
-          <a href="https://rs.school/courses/javascript-ru" target="_blank">
-               <img src="./assets/icons/rs-school-logo.svg" alt="RS School Logo" class="rs-logo">
-          </a>
-
-          </div>
-     </footer>
+          <footer>
+               <div class="container">
+                    <p>
+                         This project was made by 
+                         <a href="https://github.com/mastaka" target="_blank">Alex Serada</a>
+                         in 2024 as part of
+                         <a href="https://rs.school/courses/javascript-ru" target="_blank">
+                              <img src="./assets/icons/rs-school-logo.svg" alt="RS School Logo" class="rs-logo">
+                         </a>
+                         training course.
+                    </p>
+               </div>
+          </footer>
+          
 </body>
 </html>
