feat: tuning header and global color theme

--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 </head>
 <body>
      <header>
-          <div class="container">
-          <h1>
-               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />
-          </h1>
-          </div>
           <!--sorry for the stupid full class names. 
           it was important for me in the learning phase to know exactly 
           what I was doing and where I was referring to. -->
@@ -34,8 +29,10 @@
      </header>
      <main>
           <div class="container">
-          <p>main</p>
-          </div></main>
+               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />
+               
+               </div>
+     </main>
      <footer>
           <div class="container">
           <p>
