feat: add sections
- add sections for each categories of cv
- fix global font family

--- a/index.html
+++ b/index.html
@@ -28,10 +28,42 @@
                </ul>
      </header>
      <main>
-          <div class="container">
-               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />
-               
-               </div>
+          <section class="section" id="profile">
+               <h1 class="section-title">Aliaksei Serada</h1>
+               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />               
+          </section>
+          <section class="section" id="contacts">
+               <h2 class="section-title">Contacts</h2>
+               <p></p>
+          </section>
+          <section class="section" id="summary">
+               <h2 class="section-title">Summary</h2>
+               <p></p>
+          </section>
+          <section class="section" id="experience">
+               <h2 class="section-title">Professional Experience</h2>
+               <p></p>
+          </section>
+          <section class="section" id="skills">
+               <h2 class="section-title">Skills</h2>
+               <p></p>
+          </section>
+          <section class="section" id="education">
+               <h2 class="section-title">Education</h2>
+               <p></p>
+          </section>
+          <section class="section" id="languages">
+               <h2 class="section-title">Languages</h2>
+               <p></p>
+          </section>
+          <section class="section" id="code">
+               <h2 class="section-title">Code Example</h2>
+               <p></p>
+          </section>
+          <section class="section" id="interest">
+               <h2 class="section-title">Interests</h2>
+               <p></p>
+          </section>
      </main>
      <footer>
           <div class="container">
