--- a/index.html
+++ b/index.html
@@ -30,11 +30,33 @@
      <main>
           <section class="section" id="profile">
                <h1 class="section-title">Aliaksei Serada</h1>
+               <p>Wroclaw, Poland (GMT +1)</p>
                <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />               
           </section>
           <section class="section" id="contacts">
                <h2 class="section-title">Contacts</h2>
-               <p></p>
+               <ul>
+                    <li>
+                         <img src="./assets/icons/mastak_a-logo_20x20px.svg" alt="Logo" class="icons">
+                         <a href="https://mastaka.net/about" target="_blank">mastaka.net</a>
+                    </li>
+                    <li>
+                         <img src="./assets/icons/envelope_20x20px.svg" alt="Mail" class="icons">
+                         <a href="mailto:mastaka.design@gmail.com" target="_blank">mastaka.design[a]gmail.com</a>
+                    </li>
+                    <li>
+                         <img src="./assets/icons/discord_20x20px.svg" alt="Discord" class="icons">
+                         <a href="https://discordapp.com/users/591698499347939339" target="_blank">Mastak A (@mastaka)</a>
+                    </li>
+                    <li>
+                         <img src="./assets/icons/linkedin_20x20px.svg" alt="LinkedIn" class="icons">
+                         <a href="https://www.linkedin.com/in/alexserada/" target="_blank">alexserada</a>
+                    </li>
+                    <li>
+                         <img src="./assets/icons/github_20x20px.svg" alt="GitHub" class="icons">
+                         <a href="https://github.com/mastaka" target="_blank">mastaka</a>
+                    </li>
+               </ul>
           </section>
           <section class="section" id="summary">
                <h2 class="section-title">Summary</h2>
