fix: minor changes to pass validation

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                     <li class="navigation_item"><a href="#code" class="navigation_link">Code</a></li>
                     <li class="navigation_item"><a href="#interests" class="navigation_link">Interests</a></li>
                </ul>
+          </nav>
      </header>
-     <main>
+          <main>
           <section class="section" id="profile">
                <h1 class="section-title">Aliaksei Serada</h1>
                <p>Wroclaw, Poland (GMT +1)</p>
-               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo" />               
+               <img src="./assets/photos/alex.serada_photo_01_square_500x500px.jpg" alt="Photo" class="photo">               
           </section>
 
           <section class="section" id="contacts">
