fix: code cleaning
first attempt to clean up the code from the "training garbage" that helped me during the development process, before deployment, and make everything more readable for the reviewer

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- This document will describe my actual experience as a graphic designer, 
+ not my invented experience in the programming craft where I am still just taking my first steps. 
+ Since I am still looking for a job in my vocation as of the last commit of this file,
+ or I am overjoyed to have found a good job, I remembered to correct this comment :) 
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,15 +69,22 @@
           <section class="section" id="summary">
                <h2 class="section-title">Summary</h2>
                <p>
-                   Versatile Graphic Designer and Illustrator with a decade of global recognition. Started as a Microstock Illustrator in 2013, contributing to major platforms like 
+                   Versatile Graphic Designer and Illustrator with a decade of global recognition. 
+                   Started as a Microstock Illustrator in 2013, contributing to major platforms like 
                    <a href="https://www.shutterstock.com/g/MastakA" target="_blank">Shutterstock</a> and 
                    <a href="https://stock.adobe.com/contributor/203860893/Mastak_A" target="_blank">Adobe Stock</a>. 
-                   Transitioned to a successful Freelance Graphic Design and Illustration career in 2018, achieving Top-Level status on 
+                   Transitioned to a successful Freelance Graphic Design and Illustration career in 2018,
+                    achieving Top-Level status on 
                    <a href="https://99designs.com/profiles/mastak" target="_blank">99Designs</a>. 
-                   Proficient in Adobe Creative Cloud and Affinity, showcasing expertise in raster and vector graphics, traditional illustration, and digital animation, along with knowledge of diffusion-based generative models.
+                   Proficient in Adobe Creative Cloud and Affinity, showcasing expertise in raster and vector graphics,
+                    traditional illustration, and digital animation, along with knowledge of diffusion-based generative models.
                </p>
                <p>
-                   In June 2024, I started the <strong>JS/FE Pre-School 2024Q2</strong> course at RS School, hoping to learn basic programming skills and further dedicate my life to the machine learning related IT-industry. I began training from the very basics, as my knowledge of programming is rather scrappy, in order to build a stable knowledge base and form a mindset that will allow me to be productive in programming later on.
+                   In June 2024, I started the <strong>JS/FE Pre-School 2024Q2</strong> course at RS School,
+                   hoping to learn basic programming skills and further dedicate my life to the machine learning
+                   related IT-industry. I began training from the very basics, as my knowledge of programming is rather scrappy,
+                   in order to build a stable knowledge base and form a mindset that will allow me
+                   to be productive in programming later on.
                </p>
            </section>
            
@@ -126,7 +138,7 @@
 
            <section class="section" id="code">
                <h2 class="section-title">Code</h2>
-               <p>Sorry, but at the moment, I don't have any example of sensible code other than solving a simple problem on codewars ¯\\_(ツ)_/¯</p>
+               <p>Sorry, but іn this moment, I don't have any example of sensible code other than solving a simple problem on codewars ¯\_(ツ)_/¯</p>
                <pre>
            <code>
            function multiply(a, b){
